--- a/banTrangsuc/trangchu.html
+++ b/banTrangsuc/trangchu.html
@@ -13,8 +13,8 @@
         <div>
             <ul id="menu">
                 <li><a class="danhdau" href="trangchu.html">Trang Chủ</a></li>
-                 <li><a href="gioithieu.html">Giới Thiệu</a></li>
-                 <li><a href="sanpham.html">Sản Phẩm </a></li>
+                <li><a href="gioithieu.html">Giới Thiệu</a></li>
+                <li><a href="sanpham.html">Sản Phẩm </a></li>
                 <li><a href="blog.html">Tin Tức</a></li>
                 <li><a href="lienhe.html">Liên Hệ</a></li>
                 <li id="lg-bag"><a href="crat.html"><i class="fas fa-shopping-bag"></i></a></li>
@@ -110,8 +110,8 @@
 <section id="product1" class="section-p1">
     <h2>Sản Phẩm Nổi Bật</h2>
     <div class="container">
-        <div class="pro">
-            <img src="images/B353.19-scaled-1-576x576.jpg" alt="">
+        <div class="pro" onclick="window.location.href='sproduct.html'">
+            <img src="images/B353.jpg" alt="">
             <div class="des">
                 <span>Hoa Tai, Trang Sức Ngọc Trai </span>
                 <h5>HOA TAI NGỌC TRAI B353.19</h5>
@@ -303,48 +303,72 @@
      <div class="boxxx">
         <img src="images/gallery_6.jpeg" alt="">
      </div>
+</section >
+
+<section id="new" class="section-p1 section-m1">
+    <div class="newtext">
+        <h4>Đăng ký ngay</h4>
+        <p>Để nhận được các tin tức thời trang mới nhất cùng với <span>ưu đãi và khuyến mãi.</span></p>
+    </div>
+    <div class="form">
+        <input type="text" placeholder="Email của bạn">
+        <button class="normal">ĐĂNG KÝ</button>
+    </div>
 </section>
 
-
-<footer class="footer">
-    <div class="footer-column">
-        <h3>Danh mục</h3>
-        <ul>
-            <li><a href="#">Hoa tai</a></li>
-            <li><a href="#">Lắc tay</a></li>
-            <li><a href="#">Nhẫn</a></li>
-            <li><a href="#">Dây chuyền</a></li>
-           
-        </ul>
-    </div>
-    <div class="footer-column">
-        <h3>Liên kết</h3>
-        <ul>
-            <li><a href="#">Về chúng tôi</a></li>
-            <li><a href="#">Tuyển dụng</a></li>
-            <li><a href="#">Chính sách đổi trả</a></li>
-            <li><a href="#">Chính sách bảo hành</a></li>
-            <li><a href="#">Chính sách vận chuyển</a></li>
-        </ul>
-    </div>
-    <div class="footer-column">
-        <h3>Liên hệ</h3>
-        <p>Gọi ngay <strong>(+84) 332767567</strong></p>
+<footer class="section-p1">
+    <div class="col">
+        <img class="logo" src="/images/llogo.png" alt="">
+        <h4>Liên Hệ</h4>
         <p><strong>Địa chỉ:</strong> 126 Nguyễn Thiện Thành, Phường 5, Trà Vinh, Việt Nam</p>
+        <p>Gọi ngay <strong>(+84) 332767567</strong></p>
         <p><strong>Email:</strong> ngocsummer0309@gmail.com</p>
-    </div>
-    <div class="footer-column">
-        <h3>Đăng ký ngay</h3>
-        <p>Để nhận được các tin tức thời trang mới nhất cùng với ưu đãi và khuyến mãi.</p>
-        <div class="subscribe">
-            <input type="email" placeholder="Email">
-            <button>ĐĂNG KÝ NGAY</button>
+        <div class="follow">
+            <h4>Theo dõi qua</h4>
+            <div class="icon">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-pinterest-p"></i>
+                <i class="fab fa-youtube"></i>
+            </div>
         </div>
     </div>
+
+    <div class="col">
+        <h4>Liên kết</h4>
+        <a href="#">Về chúng tôi</a></li>
+        <a href="#">Tuyển dụng</a></li>
+        <a href="#">Chính sách đổi trả</a>
+        <a href="#">Chính sách bảo hành</a>
+        <a href="#">Chính sách vận chuyển</a>
+    </div>
+
+    <div class="col">
+        <h4>Tài khoản</h4>
+        <a href="#">Đăng nhập</a></li>
+        <a href="#">Giỏ hàng</a></li>
+        <a href="#">Danh sách yêu thích</a>
+        <a href="#">Theo dõi đơn hàng</a>
+        <a href="#">Trợ giúp</a>
+    </div>
+    <div class="col install">
+        <h4>Cài đặt ứng dụng</h4>
+        <p>Qua App Store hoặc Google Play</p>
+        <div class="row">  
+            <img src="/images/app.jpg" alt="">
+            <img src="/images/play.jpg" alt="">
+        </div>
+        <p>Thanh toán qua</p>
+        <img src="/images/pay.png" alt="">
+    </div>
+    <div class="copyright">
+            © Thiết kế và lập trình bởi Nhóm BaCon Gà
+    </div> 
+
 </footer>
-<div class="footer-bottom">
-    © Thiết kế và lập trình bởi Nhóm BaCon Ga
-</div>
+
+
 <script src="js/script.js"></script>
 </body>
 </html>
