--- a/banTrangsuc/sanpham.html
+++ b/banTrangsuc/sanpham.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TrangChu</title>
+    <title>Sản Phẩm</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>    
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -12,13 +12,235 @@
         <a href="trangchu.html"><img src="images/llogo.png" class="logo" alt=""></a>
         <div>
             <ul id="menu">
-                 <li><a  href="trangchu.html">Trang Chủ</a></li>
-                 <li><a href="gioithieu.html">Giới Thiệu</a></li>
-                 <li><a class="danhdau" href="sanpham.html">Sản Phẩm </a></li>
-                
-                 <li><a href="blog.html">Tin Tức</a></li>
-                 <li><a href="lienhe.html">Liên Hệ</a></li>
-                 <li><a href="crat.html"><i class="fas fa-shopping-bag"></i></a></li>
+                <li><a  href="trangchu.html">Trang Chủ</a></li>
+                <li><a href="gioithieu.html">Giới Thiệu</a></li>
+                <li><a class="danhdau" href="sanpham.html">Sản Phẩm </a></li>
+                <li><a href="blog.html">Tin Tức</a></li>
+                <li><a href="lienhe.html">Liên Hệ</a></li>
+                <li id="lg-bag"><a href="crat.html"><i class="fas fa-shopping-bag"></i></a></li>
+                <a href="#" id="close"><i class="fas fa-times"></i></a>
             </ul>
         </div>
+        <div id="mobile">
+            <a href="crat.html"><i class="fas fa-shopping-bag"></i></a>
+            <i id="bar" class="fas fa-bars"></i>
+            
+        </div>
     </section>
+
+    <section id="page-header">
+        <h2>#stayhome</h2>
+        <p>Tiết kiệm hơn với phiếu giảm giá tới 50%!</p>
+    </section>
+
+<section id="product1" class="section-p1">
+    <div class="container">
+        <div class="pro" onclick="window.location.href='sproduct.html'">
+            <img src="images/B353.jpg" alt="">
+            <div class="des">
+                <span>Hoa Tai, Trang Sức Ngọc Trai </span>
+                <h5>HOA TAI NGỌC TRAI B353.19</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>20,000,000 ₫</h4>
+            </div>
+            <a href="#"><i class="fas fa-shopping-cart crat"></i></a>
+        </div>
+
+        <div class="pro">
+            <img src="images/LNTW7.3.136-scaled-1-576x576.jpg" alt="">
+            <div class="des">
+                <span>Lắc tay, Trang sức vàng</span>
+                <h5>LẮC TAY VÀNG TRẮNG LNTW7.3.136</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>20,000,000 ₫</h4>
+            </div>
+            <a href="#"><i class="fas fa-shopping-cart crat"></i></a>
+        </div>
+        <div class="pro">
+            <img src="images/NCNTW5.1.224-576x576.jpg" alt="">
+            <div class="des">
+                <span>Nhẫn cưới kim cương, Trang sức cưới </span>
+                <h5>NHẪN CƯỚI KIM CƯƠNG NCNTW5.1.224</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>24,500,000 ₫</h4>
+            </div>
+            <a href="#"><i class="fas fa-shopping-cart crat"></i></a>
+        </div>
+        <div class="pro">
+            <img src="images/Four-Leaf-Clover-Rings-1-325x325.jpg" alt="">
+            <div class="des">
+                <span>Nhẫn, Trang Sức Kim Cương </span>
+                <h5>FOUR-LEAF CLOVER RINGS</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>25,000,000 ₫</h4>
+            </div>
+            <a href="#"><i class="fas fa-shopping-cart crat"></i></a>
+        </div>
+        <div class="pro">
+            <img src="images/KNNRSNT78-2-576x576.jpg" alt="">
+            <div class="des">
+                <span>Nhẫn nam, Trang sức đá quý </span>
+                <h5>NHẪN NAM SAPPHIRE KNNRSNT78</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>50,000,000 ₫</h4>
+            </div>
+            <a href="#"><i class="fas fa-shopping-cart crat"></i></a>
+        </div>
+        <div class="pro">
+            <img src="images/NNTW7.3.1164-576x576.jpg" alt="">
+            <div class="des">
+                <span>Nhẫn nữ, Trang sức vàng </span>
+                <h5>NHẪN NỮ VÀNG TRẮNG NNTW7.3.1164</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>2,000,000 ₫</h4>
+            </div>
+            <a href="#"><i class="fas fa-shopping-cart crat"></i></a>
+        </div>
+        <div class="pro">
+            <img src="images/Circle-of-Light-Heart-Earrings-1-325x325-2.jpg" alt="">
+            <div class="des">
+                <span>Hoa Tai, Trang Sức Vàng </span>
+                <h5>CIRCLE OF LIGHT HEART EARRINGS</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>2,550,000 ₫</h4>
+            </div>
+            <a href="#"><i class="fas fa-shopping-cart crat"></i></a>
+        </div>
+        <div class="pro">
+            <img src="images/Birds-of-Paradise-Pendant-1-325x325-1.jpg" alt="">
+            <div class="des">
+                <span>Dây Chuyền, Trang Sức Vàng </span>
+                <h5>BIRDS OF PARADISE PENDANT</h5>
+                <div class="star">
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                </div>
+                <h4>2,000,000 ₫</h4>
+            </div>
+            <a href="#"><i class="fas fa-shopping-cart crat"></i></a>
+        </div>
+    </div>
+
+
+</section>
+
+<section id="pagitation" class="section-p1">
+    <a class="danhdau" href="#">1</a>
+    <a href="#">2</a>
+    <a href="#">3</a>
+    <a href="#"><i class="fas fa-long-arrow-alt-right"></i>
+    </a>
+</section>
+
+<section id="new" class="section-p1 section-m1">
+    <div class="newtext">
+        <h4>Đăng ký ngay</h4>
+        <p>Để nhận được các tin tức thời trang mới nhất cùng với <span>ưu đãi và khuyến mãi.</span></p>
+    </div>
+    <div class="form">
+        <input type="text" placeholder="Email của bạn">
+        <button class="normal">ĐĂNG KÝ</button>
+    </div>
+</section>
+
+<footer class="section-p1">
+    <div class="col">
+        <img class="logo" src="/images/llogo.png" alt="">
+        <h4>Liên Hệ</h4>
+        <p><strong>Địa chỉ:</strong> 126 Nguyễn Thiện Thành, Phường 5, Trà Vinh, Việt Nam</p>
+        <p>Gọi ngay <strong>(+84) 332767567</strong></p>
+        <p><strong>Email:</strong> ngocsummer0309@gmail.com</p>
+        <div class="follow">
+            <h4>Theo dõi qua</h4>
+            <div class="icon">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-pinterest-p"></i>
+                <i class="fab fa-youtube"></i>
+            </div>
+        </div>
+    </div>
+
+    <div class="col">
+        <h4>Liên kết</h4>
+        <a href="#">Về chúng tôi</a></li>
+        <a href="#">Tuyển dụng</a></li>
+        <a href="#">Chính sách đổi trả</a>
+        <a href="#">Chính sách bảo hành</a>
+        <a href="#">Chính sách vận chuyển</a>
+    </div>
+
+    <div class="col">
+        <h4>Tài khoản</h4>
+        <a href="#">Đăng nhập</a></li>
+        <a href="#">Giỏ hàng</a></li>
+        <a href="#">Danh sách yêu thích</a>
+        <a href="#">Theo dõi đơn hàng</a>
+        <a href="#">Trợ giúp</a>
+    </div>
+    <div class="col install">
+        <h4>Cài đặt ứng dụng</h4>
+        <p>Qua App Store hoặc Google Play</p>
+        <div class="row">  
+            <img src="/images/app.jpg" alt="">
+            <img src="/images/play.jpg" alt="">
+        </div>
+        <p>Thanh toán qua</p>
+        <img src="/images/pay.png" alt="">
+    </div>
+    <div class="copyright">
+            © Thiết kế và lập trình bởi Nhóm BaCon Gà
+    </div> 
+
+</footer>
+
+
+<script src="js/script.js"></script>
+</body>
+</html>
