--- a/banTrangsuc/sanpham.html
+++ b/banTrangsuc/sanpham.html
@@ -13,9 +13,9 @@
         <div>
             <ul id="menu">
                 <li><a  href="trangchu.html">Trang Chủ</a></li>
-                <li><a href="gioithieu.html">Giới Thiệu</a></li>
                 <li><a class="danhdau" href="sanpham.html">Sản Phẩm </a></li>
                 <li><a href="blog.html">Tin Tức</a></li>
+                <li><a href="gioithieu.html">Giới Thiệu</a></li>
                 <li><a href="lienhe.html">Liên Hệ</a></li>
                 <li id="lg-bag"><a href="crat.html"><i class="fas fa-shopping-bag"></i></a></li>
                 <a href="#" id="close"><i class="fas fa-times"></i></a>
@@ -53,7 +53,7 @@
         </div>
 
         <div class="pro">
-            <img src="images/LNTW7.3.136-scaled-1-576x576.jpg" alt="">
+            <img src="images/LNTW7.jpg" alt="">
             <div class="des">
                 <span>Lắc tay, Trang sức vàng</span>
                 <h5>LẮC TAY VÀNG TRẮNG LNTW7.3.136</h5>
