--- a/banTrangsuc/blog.html
+++ b/banTrangsuc/blog.html
@@ -3,21 +3,175 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TrangChu</title>
+    <title>Tin Tức</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"/>    
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <section id="header">
+<section id="header">
         <a href="trangchu.html"><img src="images/llogo.png" class="logo" alt=""></a>
         <div>
             <ul id="menu">
                 <li><a  href="trangchu.html">Trang Chủ</a></li>
-                 <li><a href="gioithieu.html">Giới Thiệu</a></li>
-                 <li><a href="sanpham.html">Sản Phẩm </a></li>
+                <li><a  href="sanpham.html">Sản Phẩm </a></li>
                 <li><a class="danhdau" href="blog.html">Tin Tức</a></li>
-                <li><a  href="lienhe.html">Liên Hệ</a></li>
-                <li><a  href="crat.html"><i class="fas fa-shopping-bag"></i></a></li>
+                <li><a href="gioithieu.html">Giới Thiệu</a></li>
+                <li><a href="lienhe.html">Liên Hệ</a></li>
+                <li id="lg-bag"><a href="crat.html"><i class="fas fa-shopping-bag"></i></a></li>
+                <a href="#" id="close"><i class="fas fa-times"></i></a>
             </ul>
         </div>
-    </section>
+        <div id="mobile">
+            <a href="crat.html"><i class="fas fa-shopping-bag"></i></a>
+            <i id="bar" class="fas fa-bars"></i>
+            
+        </div>
+</section>
+
+<section id="page-header" class="blog-header">
+        <h2>#tintức</h2>
+        <p>Tin tức mới nhất 24h qua</p>
+</section>
+
+<section id="blog">
+    <div class="blog-box">
+        <div class="blog-img">
+            <img src="/images/blog1.webp" alt="">
+        </div>
+
+        <div class="blog-details">
+            <h4>Gần 1.000 người dự ngày hội 'Giấc Mơ Lọ Lem' của PNJ(vnexpress)</h4>
+            <p>TP HCM-PNJ khởi động chuỗi 6 ngày hội trên toàn quốc bằng sự kiện đầu tiên tại Nhà Văn hóa Thanh niên TP HCM, vào ngày 15/3. </p>
+            <a href="https://vnexpress.net/gan-1-000-nguoi-du-ngay-hoi-giac-mo-lo-lem-cua-pnj-4861586.html"target="_blank">Xem Tiếp</a>
+        </div>
+        <h1>16/3</h1>
+    </div>
+
+    <div class="blog-box">
+        <div class="blog-img">
+            <img src="/images/blog2.webp" alt="">
+        </div>
+
+        <div class="blog-details">
+            <h4>PNJ ra mắt thiết kế trang sức mới cho bộ sưu tập Audax Rosa(vnexpress)</h4>
+            <p>PNJ ra mắt thiết kế mới cho bộ sưu tập trang sức Audax Rosa với nguồn cảm hứng từ hình ảnh "đóa hồng vượt sóng", biểu tượng cho nét đẹp mềm mại và mạnh mẽ.  </p>
+            <a href="https://vnexpress.net/pnj-ra-mat-thiet-ke-trang-suc-moi-cho-bo-suu-tap-audax-rosa-4857165.html"target="_blank">Xem Tiếp</a>
+        </div>
+        <h1>10/3</h1>
+    </div>
+
+    <div class="blog-box">
+        <div class="blog-img">
+            <img src="/images/blog3.webp" alt="">
+        </div>
+
+        <div class="blog-details">
+            <h4>PNJ ra mắt bộ sưu tập trang sức Masterpiece(vnexpress)</h4>
+            <p>Masterpiece lấy cảm hứng từ vẻ đẹp ẩn sâu trong đại dương, sa mạc, thác nước, được chế tác thủ công với khóa masterpiece đặc trưng của thương hiệu.  </p>
+            <a href="https://vnexpress.net/pnj-ra-mat-bo-suu-tap-trang-suc-masterpiece-4829599.html"target="_blank">Xem Tiếp</a>
+        </div>
+        <h1>23/12</h1>
+    </div>
+
+    <div class="blog-box">
+        <div class="blog-img">
+            <img src="/images/blog4.webp" alt="">
+        </div>
+
+        <div class="blog-details">
+            <h4>Những món trang sức không thể thiếu trong ngày cưới(vnexpress)</h4>
+            <p>Nhẫn đính hôn, nhẫn cưới và bộ trang sức Vu Quy là phụ kiện quan trọng, giúp cô dâu, chú rể tạo điểm nhấn trong ngày vui.  </p>
+            <a href="https://vnexpress.net/nhung-mon-trang-suc-khong-the-thieu-trong-ngay-cuoi-4805844.html"target="_blank">Xem Tiếp</a>
+        </div>
+        <h1>19/10</h1>
+    </div>
+
+    <div class="blog-box">
+        <div class="blog-img">
+            <img src="/images/blog5.webp" alt="">
+        </div>
+
+        <div class="blog-details">
+            <h4>Bvlgari giới thiệu loạt trang sức cao cấp dịp 140 năm thành lập(vnexpress)</h4>
+            <p>Bvlgari ra mắt bộ sưu tập trang sức cao cấp "Aeterna" được chế tác thủ công từ hàng chục viên đá quý, kim cương.  </p>
+            <a href="https://vnexpress.net/bvlgari-gioi-thieu-loat-trang-suc-cao-cap-dip-140-nam-thanh-lap-4750528.html"target="_blank">Xem Tiếp</a>
+        </div>
+        <h1>26/5</h1>
+    </div>
+</section>
+
+<section id="pagitation" class="section-p1">
+    <a class="danhdau" href="#">1</a>
+    <a href="#">2</a>
+    <a href="#">3</a>
+    <a href="#"><i class="fas fa-long-arrow-alt-right"></i>
+    </a>
+</section>
+
+<section id="new" class="section-p1 section-m1">
+    <div class="newtext">
+        <h4>Đăng ký ngay</h4>
+        <p>Để nhận được các tin tức thời trang mới nhất cùng với <span>ưu đãi và khuyến mãi.</span></p>
+    </div>
+    <div class="form">
+        <input type="text" placeholder="Email của bạn">
+        <button class="normal">ĐĂNG KÝ</button>
+    </div>
+</section>
+
+<footer class="section-p1">
+    <div class="col">
+        <img class="logo" src="/images/llogo.png" alt="">
+        <h4>Liên Hệ</h4>
+        <p><strong>Địa chỉ:</strong> 126 Nguyễn Thiện Thành, Phường 5, Trà Vinh, Việt Nam</p>
+        <p>Gọi ngay <strong>(+84) 332767567</strong></p>
+        <p><strong>Email:</strong> ngocsummer0309@gmail.com</p>
+        <div class="follow">
+            <h4>Theo dõi qua</h4>
+            <div class="icon">
+                <i class="fab fa-facebook-f"></i>
+                <i class="fab fa-twitter"></i>
+                <i class="fab fa-instagram"></i>
+                <i class="fab fa-pinterest-p"></i>
+                <i class="fab fa-youtube"></i>
+            </div>
+        </div>
+    </div>
+
+    <div class="col">
+        <h4>Liên kết</h4>
+        <a href="#">Về chúng tôi</a></li>
+        <a href="#">Tuyển dụng</a></li>
+        <a href="#">Chính sách đổi trả</a>
+        <a href="#">Chính sách bảo hành</a>
+        <a href="#">Chính sách vận chuyển</a>
+    </div>
+
+    <div class="col">
+        <h4>Tài khoản</h4>
+        <a href="#">Đăng nhập</a></li>
+        <a href="#">Giỏ hàng</a></li>
+        <a href="#">Danh sách yêu thích</a>
+        <a href="#">Theo dõi đơn hàng</a>
+        <a href="#">Trợ giúp</a>
+    </div>
+    <div class="col install">
+        <h4>Cài đặt ứng dụng</h4>
+        <p>Qua App Store hoặc Google Play</p>
+        <div class="row">  
+            <img src="/images/app.jpg" alt="">
+            <img src="/images/play.jpg" alt="">
+        </div>
+        <p>Thanh toán qua</p>
+        <img src="/images/pay.png" alt="">
+    </div>
+    <div class="copyright">
+            © Thiết kế và lập trình bởi Nhóm BaCon Gà
+    </div> 
+
+</footer>
+
+
+<script src="js/script.js"></script>
+</body>
+</html>
